--- a/api-commons/src/main/resources/application.properties
+++ b/api-commons/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+mybatis.type-aliases-package=com.couston.*.model
+mybatis.mapper-locations=classpath:mappers/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
 
+mapper.mappers=com.couston.apicommons.base.BaseMapper
+mapper.not-empty=false
+mapper.identity=MYSQL
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
+jwt.secret=DmYTeLUZcPZ0$gZAY_7wY
